end of the project

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Manrope:wght@500;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
     <link
@@ -47,7 +48,6 @@
               <div
                 class="card__article__personData__linksContainer__linksButton"
               >
-                <!-- <img src="/images/icon-share.svg" alt="" /> -->
                 <svg xmlns="http://www.w3.org/2000/svg" width="15" height="13">
                   <path
                     fill="#6E8098"
@@ -69,6 +69,22 @@
                 <div class="modalArrow"></div>
               </div>
             </div>
+          </div>
+        </div>
+        <div class="card__modalForMobile">
+          <div class="card__modalForMobile__boxForLinks">
+            <p>share</p>
+            <img src="/images/icon-facebook.svg" alt="" />
+            <img src="/images/icon-twitter.svg" alt="" />
+            <img src="/images/icon-pinterest.svg" alt="" />
+          </div>
+          <div class="card__modalForMobile__linksButton">
+            <svg xmlns="http://www.w3.org/2000/svg" width="15" height="13">
+              <path
+                fill="#6E8098"
+                d="M15 6.495L8.766.014V3.88H7.441C3.33 3.88 0 7.039 0 10.936v2.049l.589-.612C2.59 10.294 5.422 9.11 8.39 9.11h.375v3.867L15 6.495z"
+              />
+            </svg>
           </div>
         </div>
       </div>
